[gd_scene load_steps=41 format=2]

[ext_resource path="res://scenes/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/player_spr_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/player_spr_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/player_spr_3.png" type="Texture" id=4]
[ext_resource path="res://sprites/player_spr_0.png" type="Texture" id=5]
[ext_resource path="res://sprites/playerback_spr_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/playerback_spr_2.png" type="Texture" id=7]
[ext_resource path="res://sprites/playerback_spr_0.png" type="Texture" id=8]
[ext_resource path="res://sprites/playerback_spr_3.png" type="Texture" id=9]
[ext_resource path="res://sprites/moon.png" type="Texture" id=10]
[ext_resource path="res://sprites/background_title2.png" type="Texture" id=11]
[ext_resource path="res://sprites/spikeD_glow_left_spr_1 - copia.png" type="Texture" id=12]
[ext_resource path="res://sprites/title_text.png" type="Texture" id=13]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://sprites/background_title1.png" type="Texture" id=15]
[ext_resource path="res://sprites/background_title3.png" type="Texture" id=16]
[ext_resource path="res://sprites/background_title4.png" type="Texture" id=17]

[sub_resource type="Environment" id=26]
background_mode = 4
glow_enabled = true

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float blackened;

void fragment() {
    vec4 texture_color = texture(TEXTURE, UV);
    COLOR = vec4(mix(texture_color.rgb, vec3(0,0,0), blackened), texture_color.a);
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/blackened = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Walking"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -11, 544 ), Vector2( 500, 544 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("TitleSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.125, 1 ),
"update": 0,
"values": [ Vector2( 513, -154 ), Vector2( 513, 250 ) ]
}

[sub_resource type="TileSet" id=4]
0/name = "spikeD_glow_left_spr_1 - copia.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -3, 0, 37, 37 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Shader" id=22]
code = "shader_type canvas_item;

uniform vec4 shine_color : hint_color = vec4(1.0);
uniform float shine_speed : hint_range(0.0, 10.0, 0.1) = 1.0;
uniform float shine_size : hint_range(0.01, 1.0, 0.01) = 0.01;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	float shine = step(1.0 - shine_size * 0.5, 0.5 + 0.5 * sin(UV.x - UV.y + TIME * shine_speed));
	COLOR.rgb = mix(COLOR.rgb, shine_color.rgb, shine * shine_color.a);
}"

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 22 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/shine_speed = 1.5
shader_param/shine_size = 0.02

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=10]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("PressStartContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.133972, 1 ),
"update": 0,
"values": [ Vector2( 420, 691 ), Vector2( 420, 480 ) ]
}

[sub_resource type="DynamicFont" id=13]
size = 8
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 14 )

[sub_resource type="Shader" id=24]
code = "shader_type canvas_item;

uniform bool apply = true;
uniform float amount = 0.1;
uniform sampler2D offset_texture : hint_white;

void fragment() {
	vec4 texture_color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 color = texture_color;
	
	if (apply == true) {
		float adjusted_amount = amount * texture(offset_texture, SCREEN_UV).r / 100.0;
		color.r = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x + adjusted_amount, SCREEN_UV.y)).r;
		color.g = texture(SCREEN_TEXTURE, SCREEN_UV).g;
		color.b = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x - adjusted_amount, SCREEN_UV.y)).b;
	}
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=25]
shader = SubResource( 24 )
shader_param/apply = true
shader_param/amount = 0.1

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 26 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 512, 300 )
frames = SubResource( 12 )

[node name="Player" type="Area2D" parent="."]
position = Vector2( -11, 544 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="Player"]
material = SubResource( 6 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walking = SubResource( 3 )

[node name="TitleAnimation" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 8 )

[node name="Moon" type="Sprite" parent="."]
modulate = Color( 2, 2, 2, 1 )
position = Vector2( 835, 72 )
scale = Vector2( -1, 1 )
texture = ExtResource( 10 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 1245179, 0, 0, 1245180, 0, 0, 1245181, 0, 0, 1245182, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1310715, 0, 0, 1310716, 0, 0, 1310717, 0, 0, 1310718, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="TitleSprite" type="AnimatedSprite" parent="."]
modulate = Color( 2, 2, 2, 1 )
material = SubResource( 23 )
position = Vector2( 513, -154 )
frames = SubResource( 7 )

[node name="PressStartContainer" type="Node2D" parent="."]
position = Vector2( 420, 691 )

[node name="btn_start" type="Button" parent="PressStartContainer"]
margin_left = -43.0
margin_top = -3.0
margin_right = 230.0
margin_bottom = 19.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "NEW GAME"
flat = true

[node name="btn_continue" type="Button" parent="PressStartContainer"]
margin_left = -43.0
margin_top = 22.0
margin_right = 230.0
margin_bottom = 44.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "CONTINUE"
flat = true

[node name="btn_options" type="Button" parent="PressStartContainer"]
margin_left = -43.0
margin_top = 47.0
margin_right = 230.0
margin_bottom = 69.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "OPTIONS"
flat = true

[node name="btn_quit" type="Button" parent="PressStartContainer"]
margin_left = -43.0
margin_top = 72.0
margin_right = 230.0
margin_bottom = 94.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "QUIT"
flat = true

[node name="PressAnimation" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 10 )

[node name="lbl_build" type="Label" parent="."]
margin_left = 686.0
margin_top = 569.0
margin_right = 1023.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 13 )
text = "build 0.0.1"
align = 2

[node name="OptionsDialog" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="OptionsDialog"]
margin_left = 81.0
margin_top = 54.0
margin_right = 942.0
margin_bottom = 543.0
color = Color( 0, 0, 0, 0.788235 )

[node name="btn_close" type="Button" parent="OptionsDialog"]
margin_left = 912.0
margin_top = 55.0
margin_right = 940.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 21 )
text = "X"

[node name="chk_SFX" type="CheckButton" parent="OptionsDialog"]
margin_left = 156.0
margin_top = 123.0
margin_right = 364.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 16 )
pressed = true
text = "Sound FX"

[node name="chk_gamepad" type="CheckButton" parent="OptionsDialog"]
margin_left = 156.0
margin_top = 223.0
margin_right = 364.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 16 )
pressed = true
text = "Gamepad"

[node name="chk_Music" type="CheckButton" parent="OptionsDialog"]
margin_left = 201.0
margin_top = 154.0
margin_right = 361.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 17 )
pressed = true
text = "Music"

[node name="lbl_title" type="Label" parent="OptionsDialog"]
margin_left = 82.0
margin_top = 69.0
margin_right = 942.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 18 )
text = "OPTIONS"
align = 1
valign = 1

[node name="lbl_lang" type="Label" parent="OptionsDialog"]
margin_left = 164.0
margin_top = 199.0
margin_right = 292.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 20 )
text = "Language"

[node name="opt_lang" type="OptionButton" parent="OptionsDialog/lbl_lang"]
margin_left = 132.0
margin_top = -4.0
margin_right = 277.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 19 )
disabled = true
text = "English"
items = [ "English", null, false, 0, null, "Spanish", null, false, 1, null, "Japanese", null, false, 2, null ]
selected = 0

[node name="ChromeAbrr" type="ColorRect" parent="."]
material = SubResource( 25 )
margin_left = -321.0
margin_top = -87.0
margin_right = 1288.0
margin_bottom = 677.0

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="PressStartContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="PressStartContainer/btn_continue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="PressStartContainer/btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="PressStartContainer/btn_quit" to="." method="_on_btn_quit_pressed"]
[connection signal="animation_finished" from="PressAnimation" to="." method="_on_PressAnimation_animation_finished"]
[connection signal="pressed" from="OptionsDialog/btn_close" to="." method="_on_btn_close_pressed"]
[connection signal="pressed" from="OptionsDialog/chk_SFX" to="." method="_on_chk_SFX_pressed"]
[connection signal="pressed" from="OptionsDialog/chk_gamepad" to="." method="_on_chk_gamepad_pressed"]
[connection signal="pressed" from="OptionsDialog/chk_Music" to="." method="_on_chk_Music_pressed"]
